@@ -1,5 +1,8 @@
 Change Log:
 =============================
+- DanbooruDownloader20161009
+  - Fix path error when do batch download.
+
 - DanbooruDownloader20161008b
   - Implement #87: new filename format %uploadDateTime%.
                    set the DateTime format in settings tab.
